# self-playing-piano

./: .gitignore  solenoid_actuator.m
avr-pwm/: .gitignore  Makefile  main.S  unroll.py
cad/: .gitignore  Makefile  common.py  key-platform.py  plunger-extension.py  requirements.txt  solenoid-support.py  solenoid-winder.py  steel-support.py
eleven-key-module/: eleven-key-module.kicad_pcb  eleven-key-module.kicad_prl  eleven-key-module.kicad_pro  eleven-key-module.kicad_sch
fpga/: .gitignore  Makefile  piano.v  piano_tb.v  pinmap-full.pcf  pinmap-icestick.pcf  top.v
midi-test/: Makefile  pitch-ramp.py  speed-ramp.py  velocity-ramp.py
solenoid-model/: solenoid_actuator.m
teensy/: .gitignore  Cargo.toml  Makefile  transition-diagram.gv
teensy/src/: main.rs
